<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addressActivity2">




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="194dp"
        android:layout_height="142dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/ourricon" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="142dp"
        android:src="@drawable/health2" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/address1"
            android:textColor="#DA680F98"
            android:textSize="20sp"
            android:textStyle="italic" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/addressquestion"
            android:textColor="#DA680F98"
            android:textSize="20sp"
            android:textStyle="italic" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:padding="3dp"
            android:text="@string/check1"
            android:textColor="#020101"
            android:textStyle="bold" />


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/check2"
            android:textColor="#000000"
            android:textStyle="bold" />


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="50dp"
        android:backgroundTint="#DA680F98"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/choose" />


</LinearLayout>













